--- a/src/app/secure/mydevices/mydevices.component.html
+++ b/src/app/secure/mydevices/mydevices.component.html
@@ -29,14 +29,14 @@
                         </div>
                     </div>
                 </div>
-                <div *ngIf="currentTab == 'team'" class="col" id="v-pills-profile" role="tabpanel"
+                <div *ngIf="currentTab == 'team'" class="card-group" id="v-pills-profile" role="tabpanel"
                     aria-labelledby="v-pills-profile-tab">
 
 
 
-                    <div *ngFor="let team of teams" class=" team-section"> 
+                    <div *ngFor="let team of teams" class="card team-section"> 
                           
-                                    <div class="card card-outline-success m-x-auto m-b-2">
+                                    <div class=" card-outline-success m-x-auto m-b-2">
                                         <div class="cust_text text-xs-center p-y-1"
                                             [style.background-color]="team.color">
                                             <h3>{{team.name}} | Total Score: {{team.score}}</h3>
