--- a/src/app/global/map/map.component.html
+++ b/src/app/global/map/map.component.html
@@ -63,13 +63,12 @@
    </svg>
 </div>
 
-<div *ngIf="mapID==3" id="ballhack">
+<div *ngIf="mapID==4" id="ballhack">
    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-      xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg10" width="243.40157"
-      height="363.59055" viewBox="0 0 243.40157 363.59055" sodipodi:docname="ballahack.svg"
+      xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg10" class="map" viewBox="0 0 243.40157 363.59055" sodipodi:docname="ballahack.svg"
       inkscape:version="1.0.2 (e86c8708, 2021-01-15)">
       <metadata id="metadata16">
 
