--- a/src/app/secure/start-game/start-game.component.html
+++ b/src/app/secure/start-game/start-game.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="row collapsible" [@collapse]="!gameBoardActive" id="gameManagementBoard">
-            <div class="col-lg-12"><h3 class="text-center pt-3">{{getSelectedGameModeName()}}</h3></div>
+            <div class="col-lg-12"><h1 class="text-center pt-3">{{getSelectedGameModeName()}}</h1></div>
 
             <div class="col-lg-12">
                 <div class="text-center pt-3">
@@ -32,8 +32,11 @@
                         <!-- <h5 *ngIf="mode == 'active'" class="modal-title" id="exampleModalLabel">Dynamic Game Configurations</h5> -->
                         <h4> WARNING: Changes impact live gameplay. </h4>
 
-                        <button type="button" class="btn btn-warning"
-                            (click)="saveNodeConfigs()">PAUSE GAME</button>
+                        <button *ngIf="!gameData.is_paused" type="button" class="btn btn-warning"
+                            (click)="pauseGame()">PAUSE GAME</button>
+
+                        <button *ngIf="gameData.is_paused" type="button" class="btn btn-info"
+                            (click)="pauseGame()">RESUME GAME</button>
 
                         <button type="button" class="btn btn-danger"
                             (click)="endGame()">END GAME</button>
