some start game styling

--- a/src/app/global/device-list/device-list.component.scss
+++ b/src/app/global/device-list/device-list.component.scss
@@ -15,6 +15,9 @@ select { transition: none !important; }//https://stackoverflow.com/questions/371
     text-align: center;
   }
 
+.custom-control {
+    padding-left: 2rem;
+}
 div.row {
     margin: 0;
 }
