cleanup edit games

--- a/src/app/global/game-config/game-config.component.html
+++ b/src/app/global/game-config/game-config.component.html
@@ -1,6 +1,6 @@
 <app-tabs>
-    <app-tab [tabTitle]="'Game Modes List'">
-      <h3>List of Saved Game Modes</h3>
+    <app-tab [tabTitle]="'Home'">
+      <h4>Saved Configurations</h4>
       <app-gamelist
         [gamemodes]="gameModes"
         (addMode)="onAddMode()"
