--- a/src/app/global/gamelist/gamelist.component.html
+++ b/src/app/global/gamelist/gamelist.component.html
@@ -1,16 +1,16 @@
 <table class="table table-striped">
     <thead>
       <th>Name</th>
-      <th>Teams</th>
+      <!-- <th>Teams</th> -->
       <!-- <th>Node Modes Enabled</th> -->
-      <th>Map</th> 
+      <th>Map</th>
       <th></th>
       <th></th>
     </thead>
     <tbody>
       <tr *ngFor="let p of gamemodes">
         <td>{{ p.name }}</td>
-        <td>{{ p.teams.length }}</td>
+        <!-- <td>{{ p.teams.length }}</td> -->
         <!-- <td>{{ p.nodeModes }}</td> -->
         <td>{{ findMapName(p.map) }}</td>
         <td><button class="btn btn-sm btn-default btn-primary" (click)="editMode.emit(p)">Edit</button></td>
