--- a/src/app/secure/start-game/start-game.component.scss
+++ b/src/app/secure/start-game/start-game.component.scss
@@ -6,6 +6,7 @@ div.main_title {
     padding: 1rem 1.5rem;
     font-weight: bolder;
     margin: 5px 5px;
+    min-width: 140px;
 }
 
 .btn:active {
