--- a/src/app/global/map/map.component.html
+++ b/src/app/global/map/map.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="mapID == 2" id="salina_gambit" [load]="updateMapState()">
+<div *ngIf="mapID == 2" [load]="updateMapState()">
    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="map"
@@ -54,21 +54,18 @@
    </svg>
 </div>
 
-<div *ngIf="mapID==4" id="ballhack" [load]="updateMapState()">
+<div *ngIf="mapID==4" [load]="updateMapState()">
    <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
       xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" id="svg10" class="map" viewBox="0 0 243.40157 363.59055" sodipodi:docname="ballahack.svg"
       inkscape:version="1.0.2 (e86c8708, 2021-01-15)">
-      <metadata id="metadata16">
-
+      <metadata>
       </metadata>
       <defs />
       <g id="g34">
-         <image sodipodi:absref="/Users/ZossFamily/Desktop/battlefield/src/assets/images/ballahack.png"
-            xlink:href="../../../assets/images/ballahack.png" id="image13" width="243.40157" height="363.59055"
-            preserveAspectRatio="none" />
+         <image xlink:href="../../../assets/images/ballahack.png" width="243.40157" height="363.59055" preserveAspectRatio="none" />
          <path class="location"
             d="m 110.73596,50.660582 19.27792,18.829596 20.62289,5.828209 27.34775,0.448324 1.34497,-28.244396 -8.06982,-20.174567 -12.55307,-12.104741 h -20.62289 l -12.55307,18.829597 z"
             id="KINGDOM" />
@@ -129,6 +126,85 @@
       </g>
    </svg>
 </div>
+
+<div *ngIf="mapID==5" [load]="updateMapState()">
+    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+    <svg
+       xmlns:dc="http://purl.org/dc/elements/1.1/"
+       xmlns:cc="http://creativecommons.org/ns#"
+       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+       xmlns:svg="http://www.w3.org/2000/svg"
+       xmlns="http://www.w3.org/2000/svg"
+       xmlns:xlink="http://www.w3.org/1999/xlink"
+       version="1.1"
+       viewBox="0 0 847 626">
+      <metadata>
+      </metadata>
+      <defs/>
+      <g>
+        <image
+           xlink:href="../../../assets/images/gamepod.png"
+           preserveAspectRatio="none"
+           height="626"
+           width="847" />
+        <path
+           d="m 25.666667,7 1.166666,147 83.999997,2.33333 22.16667,28 H 273 V 80.5 l 51.33333,-21 V 7 Z"
+           id="38" />
+        <path
+           d="m 133,184.33333 h 140 l 1.16667,178.5 -19.83334,21 H 25.666667 L 26.833333,154 l 83.999997,2.33333 z"
+           id="39"
+           class="location" />
+        <path
+           d="M 254.33333,383.83333 276.5,402.5 V 611.33333 H 26.833333 l -1.166666,-227.5 z"
+           id="40" />
+        <path
+           d="M 274.16667,362.83333 450.33333,361.66667 448,548.33333 l -171.5,0 V 402.5 l -22.16667,-18.66667 z"
+           id="41" />
+        <path
+           d="m 450.33333,361.66667 h 143.5 l 21,39.66666 -1.16666,147 -165.66667,0 z"
+           id="42"
+           class="location" />
+        <path
+           d="M 276.5,548.33333 H 448 613.66667 l 35,61.83334 L 276.5,611.33333 Z"
+           id="43" />
+        <path
+           d="M 614.83333,401.33333 H 745.5 v 44.33334 l -39.66667,1.16666 v 163.33334 h -57.16666 l -35,-61.83334 z"
+           id="44" />
+        <path
+           d="m 745.5,401.33333 1.16667,-78.16666 h 73.5 V 444.5 L 745.5,445.66667 Z"
+           id="45" />
+        <path
+           d="m 273,184.33333 h 175 l 2.33333,177.33334 -176.16666,1.16666 z"
+           id="46" />
+        <path
+           d="M 448,184.33333 617.16667,185.5 v 148.16667 l -23.33334,28 h -143.5 z"
+           id="47" />
+        <path
+           d="M 617.16667,185.5 728,185.5 726.83333,303.33333 746.66667,323.16667 745.5,401.33333 H 614.83333 l -21,-39.66666 23.33334,-28 z"
+           id="48" />
+        <path
+           d="m 324.33333,59.5 17.5,16.333333 L 574,74.666667 575.16667,7 H 324.33333 Z"
+           id="49" />
+        <path
+           d="M 324.33333,59.5 273,80.5 V 184.33333 H 448 L 449.16667,73.5 341.83333,75.833333 Z"
+           id="50" />
+        <path
+           d="M 574,74.666667 633.5,105 v 79.33333 H 448 L 449.16667,73.5 Z"
+           id="51" />
+        <path
+           d="M 633.5,105 669.66667,56 670.83333,7 H 575.16667 L 574,74.666667 Z"
+           id="52" />
+        <path
+           d="m 728,185.5 43.16667,-14 49,-1.16667 1.16666,-96.83333 9.33334,-10.5 3.5,-11.666667 L 833,40.833333 824.83333,36.166667 823.66667,9.3333333 670.83333,7 669.66667,56 633.5,105 v 79.33333 z"
+           id="53" />
+        <path
+           d="m 820.16667,170.33333 -49,1.16667 -43.16667,14 -1.16667,117.83333 19.83334,19.83334 h 73.5 z"
+           id="54" />
+      </g>
+    </svg>
+</div>
+
+
 
 <div>
    <div class="modal fade" id="locationModal" tabindex="-1" aria-labelledby="locationModalLabel" aria-hidden="true">
