--- a/src/app/global/map/map.component.html
+++ b/src/app/global/map/map.component.html
@@ -3,9 +3,9 @@
       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="map"
       viewBox="0 0 210 292" version="1.1" id="svg8">
-      <defs id="defs2" />v
+      <defs id="defs2" />
       <g id="layer1">
-         <image xlink:href="../../../assets/images/salina_gambit.png" y="-0.29215574" x="1.9073366"
+         <image id="img1" xlink:href="../../../assets/images/salina_gambit.png" y="-0.29215574" x="1.9073366"
             preserveAspectRatio="none" height="293.66766" width="206.60199" />
          <path id=17 class="location"
             d="M 1.26835,1.656226 V 291.44552 H 209.44804 V 1.656226 Z M 7.31718,5.8923672 H 203.39922 V 287.20937 H 7.31718 Z" />
