team list next to each other

--- a/src/app/secure/mydevices/mydevices.component.html
+++ b/src/app/secure/mydevices/mydevices.component.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div *ngIf="currentTab == 'team'" class="content-panel" id="v-pills-profile" role="tabpanel"
+            <div *ngIf="currentTab == 'team'" class="card-group content-panel" id="v-pills-profile" role="tabpanel"
                 aria-labelledby="v-pills-profile-tab">
 
 
