--- a/src/app/secure/mydevices/mydevices.component.html
+++ b/src/app/secure/mydevices/mydevices.component.html
@@ -13,9 +13,9 @@
                 <div class="side-bar">
                     <nav class="side-menu">
                         <ul class="nav">
-                            <li id="map" (click)="changeGameTab('map')" class="active">Map</li>
-                            <li id="teamScore" (click)="changeGameTab('team')">Team Score</li>
-                            <li id="EventsTracker" (click)="changeGameTab('live')">Events Tracker</li>
+                            <li id="map" (click)="changeGameTab('map')" class="active"><a>Map</a></li>
+                            <li id="teamScore" (click)="changeGameTab('team')"><a>Team Score</a></li>
+                            <li id="EventsTracker" (click)="changeGameTab('live')"><a>Events Tracker</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -32,7 +32,7 @@
                     aria-labelledby="v-pills-profile-tab">
 
 
-                    <div *ngFor="let team of teams" class="card team-section">
+                    <div *ngFor="let team of teams" class="team-section">
 
                         <div class=" card-outline-success m-x-auto m-b-2">
                             <div class="cust_text text-xs-center p-y-1" [style.background-color]="team.color">
