--- a/src/app/secure/mydevices/mydevices.component.html
+++ b/src/app/secure/mydevices/mydevices.component.html
@@ -76,13 +76,14 @@
                 </div>
                 <div *ngIf="currentTab == 'EventsTracker'" class="content-panel" id="v-pills-settings" role="tabpanel"
                     aria-labelledby="v-pills-settings-tab">
-                    <h3 class="center-cust"> Events List For Game</h3>
+                    <h3 class="center-cust"> Event List</h3>
                     <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th scope="col">Team</th>
                                 <th scope="col">Player</th>
                                 <th scope="col">Action</th>
+                                <th scope="col">Location</th>
                                 <th scope="col">Points</th>
                                 <th scope="col">Time</th>
                             </tr>
@@ -90,15 +91,16 @@
                         <tbody>
                             <tr *ngFor="let action of allActions">
                                 <th scope="row">
-                                    <ngb-highlight>{{action.team}}
-                                    </ngb-highlight>
+                                    <ngb-highlight>{{action.team}}</ngb-highlight>
                                 </th>
                                 <td>
-                                    <ngb-highlight>{{action.name}}
-                                    </ngb-highlight>
+                                    <ngb-highlight>{{action.name}}</ngb-highlight>
                                 </td>
                                 <td>
                                     <ngb-highlight>{{action.action}}</ngb-highlight>
+                                </td>
+                                <td>
+                                    <ngb-highlight>{{action.location}}</ngb-highlight>
                                 </td>
                                 <td>
                                     <ngb-highlight>{{action.points}}</ngb-highlight>
